Reduced JDK Level from 11 to 8
Signed-off-by: Markus KARG <markus@headcrashing.eu>